added dictionary, wrapper class for weights, altered hashmaps, implemented interface, disabled right letter wrong position button in xml file. implement later

--- a/app/src/main/res/layout/activity_faster_mind.xml
+++ b/app/src/main/res/layout/activity_faster_mind.xml
@@ -60,7 +60,9 @@
         android:layout_above="@+id/wrongLwrongPosition"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:onClick="rightLwrongPosition" />
+        android:onClick="rightLwrongPosition"
+        android:elevation="0dp"
+        android:visibility="invisible" />
 
     <Button
         android:text="Right Letter, Right Position "
